# avcpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAvcpp.cmake  avcppConfig.cmake
include/avcpp/: AV.hpp  utils.hpp
include/internal/: codec.hpp  frame.hpp  handlers.hpp  packet.hpp  swscale.hpp  utils.hpp  video_decoder.hpp  video_encoder.hpp
python/: codecs-py.hpp  frame-py.hpp  frame-to-numpy.hpp  libavpy.cpp  packet-py.hpp  pixelformats-py.hpp  ratios-py.hpp
src/: codec.cpp  frame.cpp  packet.cpp  swscale.cpp  utils.cpp  video_decoder.cpp  video_encoder.cpp
test/: test_imread.cpp  test_numpy.py  test_swscale.cpp
